--- a/report.qmd
+++ b/report.qmd
@@ -15,6 +15,7 @@ library(patchwork)
 library(gt)
 library(glue)
 library(showtext)
+library(tidycensus)
 
 options(scipen = 999)
 ```
@@ -44,7 +45,10 @@ theme_set(
 )
 ```
 
-```{r data, cache = TRUE}
+```{r data}
+#| echo: false
+#| message: false
+#| cache: true
 if (!file.exists('data/raw/wfbz_disasters_2000-2025.geojson')) {
   stop(
     "Manually download data set from https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/DWILBW and unzip to data/raw."
@@ -84,24 +88,47 @@ regions <- bind_rows(
 	filter(usfs_region != 'Pacific Southwest') %>%
 	mutate(usfs_region= if_else(usfs_region == 'Northern', 'Northern Rockies', usfs_region)) %>%
 	mutate(usfs_region= if_else(usfs_region == 'Rocky Mountain', 'Southern Rockies', usfs_region))
+
+counties_pop <- get_decennial(
+  geography = "county",
+  variables = "P1_001N",  # Total population variable in 2020 Census
+  year = 2020,
+  geometry = TRUE,
+  output = "wide",
+	progress_bar = FALSE
+) %>%
+  rename(population = P1_001N) %>%
+  select(population, geometry)
+
+regions$usfs_region_pop <- aggregate(st_centroid(counties_pop), regions, FUN = sum)$population # centroid more or less ensures counties only end up in one region
+
 ```
 
 
 ```{r, cache = TRUE}
 # Find Nearest Region
 wfbz_region <- regions$usfs_region[st_nearest_feature(wfbz, regions, pairwise = TRUE)]
+wfbz_region_area <- as.numeric(st_area(regions)[st_nearest_feature(wfbz, regions, pairwise = TRUE)]/1000/1000)
+wfbz_region_pop <- regions$usfs_region_pop[st_nearest_feature(wfbz, regions, pairwise = TRUE)]
+
 
 wfbz_crit <- wfbz %>%
   st_drop_geometry() %>%
-  mutate(usfs_region = wfbz_region) %>%
+  mutate(
+		usfs_region = wfbz_region,
+		usfs_region_area = wfbz_region_area,
+		usfs_region_pop = wfbz_region_pop
+	) %>%
   filter(wildfire_community_intersect) %>%
   group_by(usfs_region, wildfire_year) %>%
   summarize(
   	`Events` = n(),
   	`Fatalities` = sum(wildfire_max_civil_fatalities, na.rm = TRUE),
+  	`Fatalities per 100K` = 100000 * sum(wildfire_max_civil_fatalities/usfs_region_pop, na.rm = TRUE),
   	`Structures Destroyed` = sum(wildfire_struct_destroyed, na.rm = TRUE),
   	`FEMA Declaration` = sum(wildfire_fema_dec, na.rm = TRUE),
    	`Burned Area` = sum(wildfire_area, na.rm = TRUE),
+   	`Burned Area Percent` = 100 * sum(wildfire_area/usfs_region_area, na.rm = TRUE),
   	`WUI-Intermix` = sum(str_detect(wildfire_wui, 'intermix'), na.rm = TRUE),
   	`WUI-Interface` = sum(str_detect(wildfire_wui, 'interface'), na.rm = TRUE),
   	`WUI-Intermix Percent` = 100 * sum(str_detect(wildfire_wui, 'intermix'), na.rm = TRUE) / n(),
@@ -111,14 +138,20 @@ wfbz_crit <- wfbz %>%
 
 wfbz_crit_all <- wfbz %>%
   st_drop_geometry() %>%
-  mutate(usfs_region = wfbz_region) %>%
+  mutate(
+		usfs_region = wfbz_region,
+		usfs_region_area = wfbz_region_area,
+		usfs_region_pop = wfbz_region_pop
+	) %>%
   group_by(usfs_region, wildfire_year) %>%
   summarize(
   	`Events` = n(),
   	`Fatalities` = sum(wildfire_max_civil_fatalities, na.rm = TRUE),
+  	`Fatalities per 100K` = 100000 * sum(wildfire_max_civil_fatalities/usfs_region_pop, na.rm = TRUE),
   	`Structures Destroyed` = sum(wildfire_struct_destroyed, na.rm = TRUE),
   	`FEMA Declaration` = sum(wildfire_fema_dec, na.rm = TRUE),
-  	`Burned Area` = sum(wildfire_area, na.rm = TRUE),
+   	`Burned Area` = sum(wildfire_area, na.rm = TRUE),
+   	`Burned Area Percent` = 100 * sum(wildfire_area/usfs_region_area, na.rm = TRUE),
   	`WUI-Intermix` = sum(str_detect(wildfire_wui, 'intermix'), na.rm = TRUE),
   	`WUI-Interface` = sum(str_detect(wildfire_wui, 'interface'), na.rm = TRUE),
   	`WUI-Intermix Percent` = 100 * sum(str_detect(wildfire_wui, 'intermix'), na.rm = TRUE) / n(),
@@ -245,9 +278,13 @@ plotme <- function(dat, var, rel = FALSE, unit = NA, stack = TRUE){
 ```{r}
 wfbz %>%
   st_drop_geometry() %>%
-  mutate(usfs_region = wfbz_region) %>%
-  bind_rows(`All Fires` = ., `Community-Impacting Fires` = filter(.,wildfire_community_intersect), .id = 'agg') %>%
-  bind_rows(., mutate(., usfs_region = 'Nationwide')) %>%
+  mutate(
+		usfs_region = wfbz_region,
+		usfs_region_area = wfbz_region_area,
+		usfs_region_pop = wfbz_region_pop
+	) %>%
+	bind_rows(`All Fires` = ., `Community-Impacting Fires` = filter(.,wildfire_community_intersect), .id = 'agg') %>%
+  bind_rows(., mutate(., usfs_region = 'Nationwide', usfs_region_area = sum(regions$usfs_region_area), usfs_region_pop = sum(as.numeric(st_area(regions))/1000/1000))) %>%
   group_by(agg) %>%
 	mutate(N = n()/2) %>%
   group_by(agg, usfs_region, N) %>%
@@ -262,10 +299,18 @@ wfbz %>%
     `Missing Civilian Fatalities` = sum(is.na(wildfire_civil_fatalities)),
     `Missing Evacuations` = sum(is.na(wildfire_civil_evacuation)),
     `Missing Structures Destroyed` = sum(is.na(wildfire_struct_destroyed)),
+  	`Fatalities per 100K` = 100000 * sum(wildfire_max_civil_fatalities/usfs_region_pop, na.rm = TRUE),
+		`Burned Area Percent` = 100 * sum(wildfire_area/usfs_region_area, na.rm = TRUE),
 		.groups = 'drop'
   ) %>%
 	pivot_longer(c(-agg, -usfs_region, -N)) %>%
-	mutate(value = glue('{format(value)} ({format(100 * value / N, digits = 1)}%)')) %>%
+	mutate(
+		value = if_else(
+			name %in% c('Fatalities per 100K', 'Burned Area Percent'),
+			format(value, digits = 1),
+			glue('{round(value)} ({format(100 * value / N, digits = 1, nsmall = 1)}%)')
+		)
+	) %>%
 	select(-N) %>%
   pivot_wider(names_from = c(usfs_region), values_from = c(value)) %>%
 	select(order(colnames(.))) %>%
